	(epackage-config-delete-action): Pass `verbose' forward.
	(epackage-pkg-lint-directory): Correct variable.
	(epackage-cmd-upgrade-package): Add missing arg for `message'.
	(epackage-pkg-lint-downloaded-git-url): Correct function call.
	(epackage-cmd-download-action-lint-on): Correct function call.
	(epackage-batch-ui-display-package-documentation): Correct
	function call.

2010-12-21 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-with-package-info-file): Turn on
	`auto-revert-mode'.
	(epackage-turn-on-auto-revert-mode): New.
	(epackage-with-sources-list): Call `epackage-turn-on-auto-revert-mode'.
	(epackage-with-package-info-file): Call
	`epackage-turn-on-auto-revert-mode'.
	(epackage-with-git-config): Kill buffer after BODY.
	(epackage-git-config-fetch-field): New.
	(epackage-git-buffer-fetch-field): New.
	(epackage-pkg-lint-git-url): New.
	(epackage-pkg-lint-package): Call `epackage-pkg-lint-git-url'.
	(epackage-with-buffer-emacs-messages): New.
	(epackage-sources-list-build): Rename. Was
	`epackage-cmd-build-sources-list'.
	(epackage-sources-list-upgrade): Rename. Was
	`epackage-upgrade-sources-list'.
	(epackage-sources-list-initialize): Rename. Was
	`epackage-build-sources-list'.
	(epackage-pkg-lint-downloaded-git-url): New.
	(epackage-sources-list-and-repositories-sync): New.
	(epackage-sources-list-build): Call
	`epackage-sources-list-and-repositories-sync'.
	(epackage-recreate-package): New.
	(epackage--download-action-list): Set default value to
	'(enable package-depends).
	(epackage-git-command-status): New.
	(epackage-git-command-status-parse-buffer-modified): New.
	(epackage-git-command-status-modified-parse-main): New.
	(epackage-git-command-status-parse-buffer-untracked): New.
	(epackage-git-command-status-parse-buffer-commit): New.
	(epackage-git-command-status-untracked-parse-main): New.
	(epackage-git-command-status-commit-parse-main): New.
	(epackage-git-clean-state-p): New.
	(epackage-git-status-data): New.